# fastapi-neo4j-linkedin-mock

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  manage.py  pyproject.toml  readme.md  requirements.txt
project/: __init__.py  config.py
project/apis/: __init__.py  crud.py
project/apis/auth/: __init__.py  handlers.py  views.py
project/apis/user/: __init__.py  handlers.py  views.py
project/utils/: db.py  exceptions.py  miscellaneous.py  schema.py  tokens.py
